# CameraRA

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/mlanie/camerara/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/mlanie/camerara/: AutoFitTextureView.java  CameraFragment.java  MainActivity.java  MyView.java  OverlayView.java  brouillon
app/src/main/res/layout/: activity_main.xml  fragment_camera2_basic.xml
app/src/main/res/values/: base-strings.xml  colors.xml  strings.xml  template-styles.xml
app/src/test/java/com/example/mlanie/camerara/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
